chore(aws): Prepara código para integração com serviços aws - Adiciona arquivo de configurações de prod com variáveis de ambiente - Configura beans de componentes da aws - Define quais instancias usar em dev e prod

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,3 +9,11 @@ server:
   servlet:
     context-path: /api
 
+application:
+  image:
+    max-size-mb: 5
+    allowed-content-types:
+      - image/jpeg
+      - image/png
+      - image/webp
+
