feat(aws): Integra LocalStack e AWS real com terraform e docker-compose - Configura beans AWS para funcionar com LocalStack e AWS real - Cria arquivos Terraform para provisionar infra necessária (S3, SNS, SES) - Ajusta aplicação para usar config via application-prod.yml e .env - Atualiza docker-compose para subir toda infra e app integrada - Inclui Dockerfile para backend e arquivo .env

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -15,7 +15,6 @@ application:
       secret-key: ${JWT_SECRET_KEY}
       expiration: ${JWT_EXPIRATION_TIME}
 
-
 aws:
   access-key: ${AWS_ACCESS_KEY_ID}
   secret-key: ${AWS_SECRET_ACCESS_KEY}
@@ -27,3 +26,6 @@ aws:
   ses:
     region: ${AWS_SES_REGION}
     from-email: ${AWS_SES_FROM_EMAIL}
+
+  localstack:
+    endpoint: ${LOCALSTACK_ENDPOINT}
