--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,17 @@ backend/.settings
 backend/.springBeans
 backend/.sts4-cache
 
+
+# Terraform
+infra/terraform/.terraform/
+infra/terraform/terraform.tfstate
+infra/terraform/terraform.tfstate.backup
+infra/terraform/.terraform.lock.hcl  # opcional, mas pode ser versionado (explico abaixo)
+
+
+# Env
+.env
+
 # IntelliJ IDEA
 .idea/
 *.iws
